retail-media/v2026.01/docs/metrics-and-dimensions-ssp.mdx
---
title: Metrics and Dimensions (SSP)
original_file: to-migrate/criteo-dev-portal-full-export/merged_export/Retail_Media/v2026_01/docs/Guides for Retail Media API/supply-side-reporting-ssp/metrics-and-dimensions-ssp.md
---



## Introduction

In this page you will find all the metrics and dimensions that are currently support with the [Revenue Report](/retail-media/v2026.01/docs/revenue-report-ssp). Please note that many of the metrics and dimensions listed here are currently supported only through the API.

***

## Dimensions

<table>
 <thead>
  <tr>
   <th>
    <p>
     Dimensions
    </p>
   </th>
   <th>
    <p>
     Description
    </p>
   </th>
  </tr>
 </thead>
 <tbody>
  <tr>
   <td>
    <p>
     <code>
      date
     </code>
    </p>
   </td>
   <td>
    <p>
     The date of when reported activity took place occurred
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      hour
     </code>
    </p>
   </td>
   <td>
    <p>
     The hour of the day when rendered ad received an event
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      parentAccount
     </code>
    </p>
   </td>
   <td>
    <p>
     The associated account that is connected to the supply or demand account
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      accountId
     </code>
    </p>
   </td>
   <td>
    <p>
     The computed and unique identifier of the supply or demand account
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      accountName
     </code>
    </p>
   </td>
   <td>
    <p>
     The supply or demand account name
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      accountTypeName
     </code>
    </p>
   </td>
   <td>
    <p>
     The account type of the reported activity. Options will include:
    </p>
    <ul>
     <li>
      <code>
       Demand
      </code>
      \- for revenue generated from an indirect sold or private market demand account.
     </li>
     <li>
      <code>
       Supply
      </code>
      \- revenue was generated from direct sold campaigns
     </li>
    </ul>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      advertiserType
     </code>
    </p>
   </td>
   <td>
    <p>
     The advertiser account type where the ad activity originated from. Options includes:
    </p>
    <ul>
     <li>
      <code>
       retailer
      </code>
      \- ad activity sold directly in the supply account
     </li>
     <li>
      <code>
       brand
      </code>
      \- ad activity sold to a demand brand account in the Criteo network or through private market
     </li>
     <li>
      <code>
       seller
      </code>
      \- ad activity sold to a demand seller account in the Criteo network or through private market
     </li>
    </ul>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      campaignId
     </code>
    </p>
   </td>
   <td>
    <p>
     The computed unique campaign identifier of the demand or supply account that generated the activity
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      campaignName
     </code>
    </p>
   </td>
   <td>
    <p>
     The campaign name of the demand or supply account that generated the activity
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      campaignTypeName
     </code>
    </p>
   </td>
   <td>
    <p>
     The campaign type available. Available options are
     <code>
      Open Auction
     </code>
     or
     <code>
      Preferred Deals
     </code>
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      campaignStartDate
     </code>
    </p>
   </td>
   <td>
    <p>
     The start date set for the campaign
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      campaignEndDate
     </code>
    </p>
   </td>
   <td>
    <p>
     The end date set for campaign
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      lineItemId
     </code>
    </p>
   </td>
   <td>
    <p>
     The computed unique identifier of a line-item
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      lineItemName
     </code>
    </p>
   </td>
   <td>
    <p>
     The line-item name provided by the advertiser
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      lineItemStartDate
     </code>
    </p>
   </td>
   <td>
    <p>
     The start date set for the line-item
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      lineItemEndDate
     </code>
    </p>
   </td>
   <td>
    <p>
     The end date set for the line-item
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      lineItemStatus
     </code>
    </p>
   </td>
   <td>
    <p>
     The status of the line-item associated with the selected dimension, such as the date or hour indicating of when the event took place.
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      retailerId
     </code>
    </p>
   </td>
   <td>
    <p>
     The retailer ID that is associated with the report activities . This will be the same
     <code>
      id
     </code>
     provided in the API call
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      retailerName
     </code>
    </p>
   </td>
   <td>
    <p>
     The retailer name that is associated to the report activity.
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      brandId
     </code>
    </p>
   </td>
   <td>
    <p>
     The brand ID provided by the retailer brand ID associated with the advertised SKU
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      brandName
     </code>
    </p>
   </td>
   <td>
    <p>
     The retailer brand name associated with the advertised SKU
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      placementId
     </code>
    </p>
   </td>
   <td>
    <p>
     The id of the placement where the ad creative was displayed.
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      placementName
     </code>
    </p>
   </td>
   <td>
    <p>
     The name of the placement where the ad creative was displayed.
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      pageTypeName
     </code>
    </p>
   </td>
   <td>
    <p>
     The page type where the ad was rendered
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      environment
     </code>
    </p>
   </td>
   <td>
    <p>
     The environment where the ad was rendered on. Options will include web, mobile and app
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      soldBy
     </code>
    </p>
   </td>
   <td>
    <p>
     The source of where activities originated from. Options will include
     <code>
      Direct Sold
     </code>
     ,
     <code>
      Indirect Sold
     </code>
     or
     <code>
      Private Market
     </code>
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      buyType
     </code>
    </p>
   </td>
   <td>
    <p>
     The campaign buying strategy. Options will include
     <code>
      auction
     </code>
     ,
     <code>
      preferredDeals
     </code>
     , or
     <code>
      sponsorship
     </code>
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      salesChannel
     </code>
    </p>
   </td>
   <td>
    <p>
     Sales channel the attributed purchase was made through.
    </p>
    <p>
     Available options are:
    </p>
    <p>
     <code>
      online
     </code>
     - for sales attributed to an ad that was served and purchased online or in-app
    </p>
    <p>
     <code>
      offline
     </code>
     - for sales to an ad that was served online but purchase in store
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      attributionSettings
     </code>
    </p>
   </td>
   <td>
    <p>
     The lookback click and view attribution window of the requested report. The attribution window is based on the parameters selected in the report API request. The
     <code>
      attributedSettings
     </code>
     field will be based on the lookback windows provided in the API call.
    </p>
    <p>
     <b>
      Post-Click (C) lookback window
     </b>
    </p>
    <p>
     none, 7, 14, 30 days
    </p>
    <p>
     <b>
      Post-view (V) lookback window
     </b>
    </p>
    <p>
     none, 1, 7, 14, 30 days
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      activityType
     </code>
    </p>
   </td>
   <td>
    <p>
     The type of ad engagement the sale was attributed to. Available options will include
     <code>
      imp
     </code>
     for impressions or
     <code>
      click
     </code>
     for clicks
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      keyword
     </code>
    </p>
   </td>
   <td>
    <p>
     Keyword or phrase used to land on the search page where an ad creative rendered.
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      skuRelation
     </code>
    </p>
   </td>
   <td>
    <p>
     Attribution rule used to match the impression or click to a sale. Available options are:
     <code>
      Same SKU
     </code>
     ,
     <code>
      Same Parent SKU
     </code>
     ,
     <code>
      Same Category
     </code>
     ,
     <code>
      Same Brand
     </code>
     or
     <code>
      Same Seller
     </code>
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      advProductId
     </code>
    </p>
   </td>
   <td>
    <p>
     Advertised product ID; this references the same product ID of the retailer Catalogs
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      advProductName
     </code>
    </p>
   </td>
   <td>
    <p>
     Advertised product name
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      advProductGtin
     </code>
    </p>
   </td>
   <td>
    <p>
     Advertised product GTIN
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      advProductMpn
     </code>
    </p>
   </td>
   <td>
    <p>
     Advertised product MPN
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      pageCategory
     </code>
    </p>
   </td>
   <td>
    <p>
     The retailer defined category of the page where ads are rendered
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      retailerCategoryId
     </code>
    </p>
   </td>
   <td>
    <p>
     The retailer category provides the type of product the SKU belongs to. This fields provides the id of that product type
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      retailerCategoryName
     </code>
    </p>
   </td>
   <td>
    <p>
     The name of that product type
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      taxonomyBreadcrumb
     </code>
    </p>
   </td>
   <td>
    <p>
     The category breadcrumb of the product using retailer product taxonomies (L1, L2 L3 etc.). This is for analysis where SKUs are present in the displays
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      taxonomy1Id
     </code>
    </p>
    <p>
     <code>
      taxonomy2Id
     </code>
    </p>
    <p>
     <code>
      taxonomy3Id
     </code>
    </p>
    <p>
     <code>
      taxonomy4Id
     </code>
    </p>
    <p>
     <code>
      taxonomy5Id
     </code>
    </p>
    <p>
     <code>
      taxonomy6Id
     </code>
    </p>
    <p>
     <code>
      taxonomy7Id
     </code>
    </p>
   </td>
   <td>
    <p>
     The ID SKU's taxonomy. The revenue report provides the option to select level 1 through level 7.
    </p>
    <p>
     ℹ️
     <b>
      Note
     </b>
     : SKUs will normally have at least the primary sku taxonomy (L1). All following levels are considered additional taxonomies. If a SKU does not have an additional taxonomy level, the report will default to
     <code>
      unknown
     </code>
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      taxonomy1Name
     </code>
    </p>
    <p>
     <code>
      taxonomy2Name
     </code>
    </p>
    <p>
     <code>
      taxonomy3Name
     </code>
    </p>
    <p>
     <code>
      taxonomy4Name
     </code>
    </p>
    <p>
     <code>
      taxonomy5Name
     </code>
    </p>
    <p>
     <code>
      taxonomy6Name
     </code>
    </p>
    <p>
     <code>
      taxonomy7Name
     </code>
    </p>
   </td>
   <td>
    <p>
     The name SKU's taxonomy. If a SKU does not have an additional taxonomy level, the report will default to
     <code>
      unknown
     </code>
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      targetedKeywordType
     </code>
    </p>
   </td>
   <td>
    <p>
     The conquesting ad strategy used with the keywords. Output values of this dimension includes:
    </p>
    <p>
     <code>
      Conquesting
     </code>
     – Search terms the line item uses to target competitors' branded keywords.
    </p>
    <p>
     <code>
      Branded
     </code>
     – Search terms the line item uses to target its own branded keywords.
    </p>
    <p>
     <code>
      Generic
     </code>
     – Search terms that are neutral or non-branded, targeted by the line item.
    </p>
    <p>
     <code>
      Unknown
     </code>
     – Search term and SKU pairs that don’t have a defined conquesting type. These are typically keywords used before a conquesting strategy was implemented.
    </p>
   </td>
  </tr>
 </tbody>
</table>

***

### Metrics

<table>
 <thead>
  <tr>
   <th>
    <p>
     Dimensions
    </p>
   </th>
   <th>
    <p>
     Description
    </p>
   </th>
  </tr>
 </thead>
 <tbody>
  <tr>
   <td>
    <p>
     <code>
      numberOfCampaigns
     </code>
    </p>
   </td>
   <td>
    <p>
     the total count of campaigns associated with the selected report dimension.
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      numberOfLineItems
     </code>
    </p>
   </td>
   <td>
    <p>
     The total count of line-items associated with the selected report dimension.
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      numberOfSkus
     </code>
    </p>
   </td>
   <td>
    <p>
     The total count of skus associated with the selected report dimension.
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      skuPrice
     </code>
    </p>
   </td>
   <td>
    <p>
     The total price of each SKU unit.
    </p>
    <ul>
     <li>
      _Note_*: It is recommended to utilize metrics such as
      <code>
       advProductId
      </code>
      ,
      <code>
       advProductGtin
      </code>
      , and
      <code>
       advProductMpn
      </code>
      to access individual SKU prices. However, when considering other dimensions at the line-item, campaign, or account level, the sum of all SKU prices will be calculated.
     </li>
    </ul>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      pageViews
     </code>
    </p>
   </td>
   <td>
    <p>
     The count of unique ad calls on a retailer network. Use this metric when referencing to dimensions that relates to itself to receive a more comprehensive data. Using dimensions such as
     <code>
      pageTypeName
     </code>
     ,
     <code>
      placementId
     </code>
     or
     <code>
      placementName
     </code>
     will provide you data to understand the performance of this metric.
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      impressions
     </code>
    </p>
   </td>
   <td>
    <p>
     An impression represents each time an ad renders on a page, regardless of clicks or views.
    </p>
    <p>
     An impression for a Sponsored Product ad is when the sponsored SKU renders on the page (the product being the ad).
    </p>
    <p>
     An impression for a Commerce Display ad is when the entire banner (creative + product) renders on the page.
    </p>
    <p>
     An impression for a Display banner ad is when the creative banner renders on the page.
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      productClicks
     </code>
    </p>
   </td>
   <td>
    <p>
     Total count of the click events that occur when a user clicks a product in a placement
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      placementClicks
     </code>
    </p>
   </td>
   <td>
    <p>
     Total count of the click events that occur when a user clicks a placement
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      clicks
     </code>
    </p>
   </td>
   <td>
    <p>
     The total count of all click events
    </p>
    <ul>
     <li>
      _Formula_*:
      <code>
       placementClicks
      </code>
      +
      <code>
       productClicks
      </code>
     </li>
    </ul>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      sales
     </code>
    </p>
   </td>
   <td>
    <p>
     The total attributed revenue from product sales
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      units
     </code>
    </p>
   </td>
   <td>
    <p>
     The total attributed product units sold
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      assistedSales
     </code>
    </p>
   </td>
   <td>
    <p>
     Sales revenue attributed to a click or impression of all the ads that appeared on a page within the chosen attribution window (specified at the campaign level) but were not determined to be the
     <code>
      attributedSales
     </code>
     (the last ad before the customer purchased).
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      assistedUnits
     </code>
    </p>
   </td>
   <td>
    <p>
     The number of events that occurred that helped generated a sale. Assisted units are excluded from
     <code>
      attributedUnits
     </code>
     . This means its not counted in the attributed units calculation
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      openAuctionRevenue
     </code>
     (_deprecated_)
    </p>
   </td>
   <td>
    <p>
     The total amount of sponsored products revenue generated on the set date, not including sponsorships.
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      preferredDealsRevenue
     </code>
     (_deprecated_)
    </p>
   </td>
   <td>
    <p>
     The total amount of onsite display revenue generated on the set date, not including sponsorships.
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      sponsoredProductRevenue
     </code>
    </p>
   </td>
   <td>
    <p>
     The total amount of sponsored products revenue generated on the set date, not including sponsorships.
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      onsiteDisplayRevenue
     </code>
    </p>
   </td>
   <td>
    <p>
     The total amount of onsite display revenue generated on the set date, not including sponsorships.
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      revenue
     </code>
    </p>
   </td>
   <td>
    <p>
     The total revenue generated on the set date. The
     <code>
      revenue
     </code>
     metric take the total revenue generated across preferred deals or auction campaigns for that period and is computed the same way as the
     <code>
      openAuctionRevenue
     </code>
     and
     <code>
      preferredDealsRevenue
     </code>
     .
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      transactions
     </code>
    </p>
   </td>
   <td>
    <p>
     The total amount of attributed orders/transactions
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      ctr
     </code>
    </p>
   </td>
   <td>
    <p>
     The percentage of shoppers who clicked an ad rendered on a page.
    </p>
    <p>
     Product and Product Category Report Types
    </p>
    <ul>
     <li>
      _Formula_*:
      <code>
       clicks
      </code>
      /
      <code>
       productImpressions
      </code>
     </li>
    </ul>
    <p>
     All other report types
    </p>
    <ul>
     <li>
      _Formula_*:
      <code>
       clicks
      </code>
      /
      <code>
       placementImpressions
      </code>
     </li>
     <li>
      _Note_*: there are two types of impressions that can be measured to know the success of your ads:
      <code>
       placementImpressions
      </code>
      and
      <code>
       productImpressions
      </code>
      . Preferred deals have placement impressions, while open auction uses product impressions. For more info:
      <a href="https://help.retailmedia.criteo.com/kb/guide/en/product-placement-impressions-Yg9vyLMSMS/Steps/2492962">
       Product &amp; Placement Impression
      </a>
      Help Center article
     </li>
    </ul>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      cr
     </code>
    </p>
   </td>
   <td>
    <p>
     The number of conversion generated by the visitors to the retailer site.
    </p>
    <ul>
     <li>
      _Formula_*: number of conversions /
      <code>
       clicks
      </code>
      \* 100
     </li>
    </ul>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      cpc
     </code>
    </p>
   </td>
   <td>
    <p>
     Average cost-per-click calculated by dividing openAuctionRevenue / clicks or preferredDealsRevenue / clicks
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      cpm
     </code>
    </p>
   </td>
   <td>
    <p>
     Average cost per mille calculated by diving
     <code>
      preferredDealsRevenue
     </code>
     /
     <code>
      impressions
     </code>
     * 1000
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      roas
     </code>
    </p>
   </td>
   <td>
    <p>
     Return-on-ad-spend (ROAS), calculated by dividing
     <code>
      sales
     </code>
     /
     <code>
      openAuctionRevenue
     </code>
     or
     <code>
      sales
     </code>
     /
     <code>
      preferredDealsRevenue
     </code>
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      workingMedia
     </code>
    </p>
   </td>
   <td>
    <p>
     The total spend paid by the brand
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      netRevenue
     </code>
    </p>
   </td>
   <td>
    <p>
     The total revenue from brand spend for the retailer
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      uniqueVisitors
     </code>
    </p>
   </td>
   <td>
    <p>
     The number of distinct shoppers exposed to an ad within the reporting period. Each shopper is counted once using the retailer cookie ID.
    </p>
    <p>
     <code>
      uniqueVisitors
     </code>
     is an estimate, minor 1% discrepancies can occur.
    </p>
    <p>
     Criteo uses retailer cookie IDs to identify users across sessions on the same device. Each ID can last up to a year, provided the user does not clear their cookies.
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      frequency
     </code>
    </p>
   </td>
   <td>
    <p>
     An average representing how often an impression has been shown to the same user
    </p>
   </td>
  </tr>
 </tbody>
</table>

<Warning>
  The `uniqueVisitors` metric may show discrepancies compared to UI values when querying long time ranges. Due to API limitations, reports can only be retrieved for a **maximum of 100 days per request**. To analyze longer periods, multiple requests must be performed and aggregated client-side.

  While this approach works for additive metrics (e.g. impressions), it may lead to **double counting** for user-based metrics such as `uniqueVisitors` or `reach`, since the same user can appear in multiple reporting windows. As a result, summing `uniqueVisitors` across multiple requests may produce higher values than those displayed in the UI, where user deduplication is applied across the full time range.
</Warning>

***

### Video Metrics

<table>
 <thead>
  <tr>
   <th>
    <p>
     Key-Values
    </p>
   </th>
   <th>
    <p>
     Data Type
    </p>
   </th>
   <th>
    <p>
     Description
    </p>
   </th>
  </tr>
 </thead>
 <tbody>
  <tr>
   <td>
    <p>
     <code>
      videoViews
     </code>
    </p>
   </td>
   <td>
    <p>
     <code>
      string
     </code>
    </p>
   </td>
   <td>
    <p>
     The number of times at least 50% of the video ad appeared for at least 2 seconds (MRC standard).
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      videoStarts
     </code>
    </p>
   </td>
   <td>
    <p>
     <code>
      string
     </code>
    </p>
   </td>
   <td>
    <p>
     The number of times one of your video ads started playing.
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      videosPlayedTo25
     </code>
    </p>
   </td>
   <td>
    <p>
     <code>
      string
     </code>
    </p>
   </td>
   <td>
    <p>
     The number of times one of your videos played to at least 25% of its duration.
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      videosPlayedTo50
     </code>
    </p>
   </td>
   <td>
    <p>
     <code>
      string
     </code>
    </p>
   </td>
   <td>
    <p>
     The number of times one of your videos played to at least 50% of its duration.
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      videosPlayedTo75
     </code>
    </p>
   </td>
   <td>
    <p>
     <code>
      string
     </code>
    </p>
   </td>
   <td>
    <p>
     The number of times one of your videos played to at least 75% of its duration.
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      videosPlayedTo100
     </code>
    </p>
   </td>
   <td>
    <p>
     <code>
      string
     </code>
    </p>
   </td>
   <td>
    <p>
     The number of times one of your videos played to 100% of its duration.
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      videoPlayingRate
     </code>
    </p>
   </td>
   <td>
    <p>
     <code>
      string
     </code>
    </p>
   </td>
   <td>
    <p>
     The average played percentage of a started video.
    </p>
    <p>
     Formula: Sum of Quartiles x 0.25 / (4 x Video starts)
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      videoCompletionRate
     </code>
    </p>
   </td>
   <td>
    <p>
     <code>
      string
     </code>
    </p>
   </td>
   <td>
    <p>
     The percentage of started videos that played for their entire duration.
    </p>
    <p>
     Formula: Number of videos that played to completion / Total number of videos started * 100
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      videoStartingRate
     </code>
    </p>
   </td>
   <td>
    <p>
     <code>
      string
     </code>
    </p>
   </td>
   <td>
    <p>
     The percentage of videos printed that started playing.
    </p>
    <p>
     Formula: Video Starts / Placement Impressions
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      videoPlayingRate
     </code>
    </p>
   </td>
   <td>
    <p>
     <code>
      string
     </code>
    </p>
   </td>
   <td>
    <p>
     The average played percentage of a started video.
    </p>
    <p>
     Formula: Sum of Quartiles x 0.25 / (4 x Video starts)
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      videoMuted
     </code>
    </p>
   </td>
   <td>
    <p>
     <code>
      string
     </code>
    </p>
   </td>
   <td>
    <p>
     The number of times users clicked the “mute” button on your video.
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      videoUnmuted
     </code>
    </p>
   </td>
   <td>
    <p>
     <code>
      string
     </code>
    </p>
   </td>
   <td>
    <p>
     The number of times users clicked the “unmute” button on your video.
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      videoResumed
     </code>
    </p>
   </td>
   <td>
    <p>
     <code>
      string
     </code>
    </p>
   </td>
   <td>
    <p>
     The number of times users activated the resume control after the creative had been stopped and paused.
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      videoPaused
     </code>
    </p>
   </td>
   <td>
    <p>
     <code>
      string
     </code>
    </p>
   </td>
   <td>
    <p>
     The number of times users activated the pause control on the video.
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      videoViewability
     </code>
    </p>
   </td>
   <td>
    <p>
     <code>
      string
     </code>
    </p>
   </td>
   <td>
    <p>
     The percentage of video ads that were considered viewable. At least 50% of the ad’s pixels must be visible on the screen for at least two continuous seconds (MRC standard). Requires OMID support.
    </p>
    <p>
     Formula: Viewable Impressions / Placement Impressions
    </p>
   </td>
  </tr>
 </tbody>
</table>

***

<br />


